# shaped

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint-worker.sh  entrypoint.sh  pyproject.toml
api/: serializers.py  tasks.py  tests.py  urls.py  utils.py  views.py
registro/: models.py
registro/migrations/: 0001_initial.py
shaped/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
